Styling: Text alignment and row border fixes

--- a/src/app/order-success/order-success.component.css
+++ b/src/app/order-success/order-success.component.css
@@ -13,7 +13,7 @@
 
 .pl-3,
 .px-3 {
-  padding-left: 2rem !important;
+  padding-left: 1.3rem !important;
 }
 
 .pl-3,
@@ -21,18 +21,22 @@
   padding-right: 2rem !important;
 }
 
-.row {
-  margin-left: 5px !important;
-  margin-right: 5px !important;
-}
-
 .col-lg-12 {
   margin-bottom: 30px;
 }
 
-h1 {
+h5 {
   margin-top: 0.5rem !important;
   margin-bottom: 0.5rem !important;
+}
+
+.text-justify {
+  margin-bottom: 0;
+}
+
+.list-group-item {
+  border-left: none;
+  border-right: none;
 }
 
 body {
